# tbm_bike_rncp

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  pyproject.toml
analysis/: __init__.py  queries_duckdb.py
ingestion/: __init__.py  collect_api.py  crawl_actus.py  scrape_alertes.py  to_parquet.py
lake/: __init__.py  minio_client.py
orchestration/: __init__.py  definitions.py
tests/: test_ingestion.py  test_to_parquet.py
transform/dbt_velos/: dbt_project.yml  profiles.yml
transform/dbt_velos/models/: schema.yml  sources.yml
transform/dbt_velos/models/marts/: mart_profil_horaire.sql  mart_tension_stations.sql
transform/dbt_velos/models/staging/: stg_station_status.sql
